<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auctions</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register">Sign up</string>
    <string name="signIn">Sign in</string>
    <string name="signOut">Sign out</string>
    <string name="title_activity_register">Sign up</string>
    <string name="successfulSignUp">Sign up successful!</string>
    <string name="title_activity_stores">Stores</string>
    <string name="title_activity_main">Auction application</string>
    <string name="title_most_recent">Most recent</string>
    <string name="title_most_viewed">Most viewed</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_activity_products">Products</string>
    <string name="stores">Stores</string>
    <string name="products">Products</string>
    <string name="upload_ad">Upload ad</string>
    <string name="search">Search</string>
    <string name="search_product">Enter a keyword</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_upload">Upload ad</string>
    <string name="upload">Fill in the fields</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Price</string>
    <string name="empty">Empty!</string>
    <string name="viewsLabel">Views: </string>
    <string name="addressLabel">Location: </string>
    <string name="title_activity_upload_store">Upload store</string>
    <string name="upload_store">Upload store</string>
    <string name="address">Address</string>
    <string name="get_location">Pick location</string>
    <string name="pick_logo_image">Pick logo image</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="title_activity_pick_location">Pick location</string>
    <string name="location">Location</string>
    <string name="duration">Duration end:</string>
    <string name="properties">Properties</string>
    <string name="comment">Comment...</string>
    <string name="category">Category:</string>
    <string name="you_are_here">You\'re here</string>
    <string name="field_is_empty">Field is empty!</string>
    <string name="store_uploading_failed">Store uploading failed!</string>
    <string name="store_uploading_successful">Store uploading was successful!</string>
    <string name="uploading">Uploading...</string>
    <string name="typeLabel">"Type: "</string>
    <string name="store_type">Store type:</string>
    <string name="results">Results:</string>
    <string name="confirm_location">Confirm location</string>
    <string name="confirm_location_message">This is the address: %s. Confirm?</string>
    <string name="search_label">Search</string>
    <string name="no_result_found">No result found!</string>
    <string name="more">MORE</string>
    <string name="product_upload_successful">Product upload was successful!</string>
    <string name="product_upload_failed">Product upload failed!</string>
    <string name="upload_product">Upload product</string>

    <string name="title_activity_product_details">Product details</string>
    <string name="price_label">Price:</string>
    <string name="duration_end_label">Duration end:</string>
    <string name="location_label">Location:</string>
    <string name="properties_label">Properties:</string>
    <string name="comments_label">Comments:</string>
    <string name="store_label">Store:</string>
    <string name="category_label">Category:</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="title_activity_store_details">Store details</string>
    <string name="type_label">Type:</string>
    <string name="store_dd">Store:</string>
    <string name="store_name">Store name</string>
    <string name="nearest_product">Nearest product</string>
    <string name="related_products">Related products</string>
    <string name="similar_products">Similar products</string>
    <string name="chose_a_store">Chose a store</string>

</resources>
