<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:gravity="center_horizontal"
    android:paddingBottom="16dp"
    >

    <ProgressBar
        android:id="@+id/uploadProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/uploadForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/upload"
                android:textSize="24dp"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productname"
                android:hint="@string/product_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/price"
                android:inputType="numberDecimal"
                android:hint="@string/product_price"/>


            <AutoCompleteTextView
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_name" >
                <requestFocus />
            </AutoCompleteTextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:id="@+id/addressET"
                android:enabled="false"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_location"
                android:id="@+id/getLocationBtn"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/duration"
                android:hint="@string/duration"
                android:inputType="date"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/properties"
                android:hint="@string/properties"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/comment"
                android:hint="@string/comment"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uploadbtn"
                android:text="Upload"
                android:background="#8c96ff"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/camera"
                android:text="Take a picture"/>






        </LinearLayout>

    </ScrollView>

</LinearLayout>