<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="6dp"
              android:paddingRight="6dp">

    <ProgressBar
        android:id="@+id/uploadProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/uploadForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/upload"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/productname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/product_price"
                    android:inputType="numberDecimal"/>

                <Spinner
                    android:id="@+id/currency"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/store_name"
                android:textSize="20sp"/>

            <Spinner
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addressTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:hint="@string/address"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/getLocationBtn"
                    style="@style/textviewButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/get_location"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="20sp"/>


            <DatePicker
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:hint="@string/duration"/>

            <EditText
                android:id="@+id/properties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/properties"/>

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"/>


            <ImageView
                android:id="@+id/ivDrawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/nophoto"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/imgBtnPhoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/close_buttons_margin"
                    android:layout_weight="1"
                    android:background="#8c96ff"
                    android:src="@android:drawable/ic_menu_camera"/>

                <ImageButton
                    android:id="@+id/btnUpload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/close_buttons_margin"
                    android:layout_weight="1"
                    android:background="#8c96ff"
                    android:src="@android:drawable/ic_menu_upload"/>

                <ImageButton
                    android:id="@+id/imgBtnDelete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/close_buttons_margin"
                    android:layout_weight="1"
                    android:background="#8c96ff"
                    android:src="@android:drawable/ic_menu_delete"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>